--- a/src/lab1/src/test/test_dash.ipynb
+++ b/src/lab1/src/test/test_dash.ipynb
@@ -162,6 +162,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@app.callback(\n",
+    "    Output('graph-with-slider', 'figure'),\n",
+    "    Input('year-slider', 'value'))\n",
+    "def update_figure(selected_year):\n",
+    "    filtered_df = df[df.year == selected_year]\n",
+    "\n",
+    "    fig = px.scatter(filtered_df, x=\"gdpPercap\", y=\"lifeExp\",\n",
+    "                     size=\"pop\", color=\"continent\", hover_name=\"country\",\n",
+    "                     log_x=True, size_max=55)\n",
+    "\n",
+    "    fig.update_layout(transition_duration=500)\n",
+    "\n",
+    "    return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
