--- a/src/lab1/src/test/test_dash.ipynb
+++ b/src/lab1/src/test/test_dash.ipynb
@@ -186,7 +186,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "app.run_server(debug=True)"
+   ]
   }
  ],
  "metadata": {
