--- a/src/lab1/src/test/test_dash.ipynb
+++ b/src/lab1/src/test/test_dash.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,7 @@
     "from IPython.display import display, Javascript\n",
     "\n",
     "from dash import Dash, dcc, html, Input, Output\n",
+    "from jupyter_dash import JupyterDash\n",
     "import plotly.express as px\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
@@ -134,16 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "app = Dash(__name__)"
+    "app = JupyterDash(__name__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
