--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -298,6 +298,10 @@
     "data_files = [x for x in listdir(data_dir) if isfile(join(data_dir, x))]\n",
     "\n",
     "\n",
+    "\n",
+    "#------------------------------------\n",
+    "# Interactive Widget component(s)\n",
+    "#------------------------------------\n",
     "w_dataset = Dropdown(options=data_files, value=data_files[0], description='Dataset ', disabled=False)\n",
     "w_algo_list = Dropdown(options=algos, value=algos[0], description='Algorihtm ', disabled=False)\n",
     "# w_algo = BoundedIntText(value=no_of_algo, description='Total algo ', min=1, max=5, step=1, disabled=False)\n",
