--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -296,7 +296,7 @@
     "# widget configuration\n",
     "#-----------------------\n",
     "data_files = [x for x in listdir(data_dir) if isfile(join(data_dir, x))]\n",
-    "\n",
+    "algos = [convert_to_normal(x.name) for x in algorithms_to_run]\n",
     "\n",
     "\n",
     "#------------------------------------\n",
