--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -298,7 +298,9 @@
     "data_files = [x for x in listdir(data_dir) if isfile(join(data_dir, x))]\n",
     "algos = [x.name for x in algorithms_to_run]\n",
     "\n",
-    "\n",
+    "show_algo_comparsion=True\n",
+    "show_dataset_comparsion=False\n",
+    "show_verbose=False\n",
     "\n",
     "#------------------------------------\n",
     "# Interactive Widget component(s)\n",
