--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -261,10 +261,10 @@
     "    CentralityAlgorithm(\"betweenness_centrality\", nx.betweenness_centrality, {\"k\":None,\"seed\":7,\"normalized\":True,\"weight\":\"weight\"}, {\"direction\":\"both\"})\n",
     "]\n",
     "\n",
-    "# total sample size\n",
-    "sample_size = 25\n",
-    "verbose = False\n",
-    "plot = False\n",
+    "# # total sample size\n",
+    "# sample_size = 25\n",
+    "# verbose = False\n",
+    "# plot = False\n",
     "\n",
     "# config. dir for input graph\n",
     "parent_dir = abspath(join(join(getcwd(), pardir), pardir))\n",
@@ -292,9 +292,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#-----------------------\n",
-    "# widget configuration\n",
-    "#-----------------------\n",
+    "#--------------------------\n",
+    "# widget configuration(s)\n",
+    "#--------------------------\n",
     "data_files = [x for x in listdir(data_dir) if isfile(join(data_dir, x))]\n",
     "algos = [x.name for x in algorithms_to_run]\n",
     "sample_size = 25\n",
