--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -311,7 +311,8 @@
     "\n",
     "w_show_algo_comparsion = Checkbox(value=show_algo_comparsion, description='Show Algo. Comparsion', disabled=False)\n",
     "w_show_dataset_comparsion = Checkbox(value=show_dataset_comparsion, description='Show Dataset Comparsion', disabled=False)\n",
-    "w_show_verbose = Checkbox(value=show_verbose, description='Show Verbose', disabled=False)"
+    "w_show_verbose = Checkbox(value=show_verbose, description='Show Verbose', disabled=False)\n",
+    "\n"
    ]
   },
   {
