--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -312,7 +312,8 @@
     "w_show_algo_comparsion = Checkbox(value=show_algo_comparsion, description='Show Algo. Comparsion', disabled=False)\n",
     "w_show_dataset_comparsion = Checkbox(value=show_dataset_comparsion, description='Show Dataset Comparsion', disabled=False)\n",
     "w_show_verbose = Checkbox(value=show_verbose, description='Show Verbose', disabled=False)\n",
-    "\n"
+    "\n",
+    "meta_data = [ w_dataset, w_algo_list, w_show_algo_comparsion, w_show_dataset_comparsion, w_show_verbose ]"
    ]
   },
   {
