--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -313,6 +313,13 @@
     "w_show_dataset_comparsion = Checkbox(value=show_dataset_comparsion, description='Show Dataset Comparsion', disabled=False)\n",
     "w_show_verbose = Checkbox(value=show_verbose, description='Show Verbose', disabled=False)\n",
     "\n",
+    "\n",
+    "def create_expanded_button(description, button_style):\n",
+    "    return Button(description=description, button_style=button_style, layout=Layout(height='auto', width='auto'))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "meta_data = [ w_dataset, w_algo_list, w_show_algo_comparsion, w_show_dataset_comparsion, w_show_verbose ]"
    ]
   },
