--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "from enum import Enum\n",
     "\n",
     "import ipywidgets as widgets\n",
-    "from ipywidgets import interact, interactive, fixed, interact_manual, Dropdown, Text, GridBox, VBox, HBox, Accordion, BoundedIntText, Checkbox, Layout, IntProgress, Tab, Image, Button\n",
+    "from ipywidgets import interact, interactive, fixed, interact_manual, Dropdown, Text, GridBox, GridspecLayout, VBox, HBox, Accordion, BoundedIntText, Checkbox, Layout, IntProgress, Tab, Image, Button\n",
     "from IPython.display import display, Javascript\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
@@ -314,8 +314,8 @@
     "w_show_verbose = Checkbox(value=show_verbose, description='Show Verbose', disabled=False)\n",
     "\n",
     "\n",
-    "def create_expanded_button(description, button_style):\n",
-    "    return Button(description=description, button_style=button_style, layout=Layout(height='auto', width='auto'))\n",
+    "# def create_expanded_button(description, button_style):\n",
+    "#     return Button(description=description, button_style=button_style, layout=Layout(height='auto', width='auto'))\n",
     "\n",
     "\n",
     "\n",
