--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -317,8 +317,7 @@
     "# def create_expanded_button(description, button_style):\n",
     "#     return Button(description=description, button_style=button_style, layout=Layout(height='auto', width='auto'))\n",
     "\n",
-    "\n",
-    "\n",
+    "grid = GridspecLayout(3, 2, height='auto', width='auto')\n",
     "\n",
     "meta_data = [ w_dataset, w_algo_list, w_show_algo_comparsion, w_show_dataset_comparsion, w_show_verbose ]"
    ]
