--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -288,9 +288,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dad6e923eb10461fb555707e8d632c37",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GridspecLayout(children=(Dropdown(description='Dataset ', layout=Layout(grid_area='widget001'), options=('DM-H…"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#--------------------------\n",
     "# widget configuration(s)\n",
@@ -319,7 +335,16 @@
     "\n",
     "grid = GridspecLayout(3, 2, height='auto', width='auto')\n",
     "\n",
-    "meta_data = [ w_dataset, w_algo_list, w_show_algo_comparsion, w_show_dataset_comparsion, w_show_verbose ]"
+    "grid[0, 0] = w_dataset\n",
+    "grid[0, 1] = w_algo_list\n",
+    "grid[1, 0] = w_sample_size\n",
+    "grid[1, 1] = w_show_algo_comparsion\n",
+    "grid[2, 0] = w_show_dataset_comparsion\n",
+    "grid[2, 1] = w_show_verbose\n",
+    "\n",
+    "grid\n",
+    "\n",
+    "# meta_data = [ w_dataset, w_algo_list, w_show_algo_comparsion, w_show_dataset_comparsion, w_show_verbose ]"
    ]
   },
   {
