--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -288,21 +288,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9075088c3a304e008c64030eb93313c0",
+       "model_id": "2adeaa2fd08a455f9f220e6c703148d5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "GridspecLayout(children=(Dropdown(description='Dataset ', layout=Layout(grid_area='widget001'), options=('DM-H…"
+       "GridBox(children=(Dropdown(description='Dataset ', options=('DM-HT.txt', 'CE-HT.txt', 'DM-HT_small.txt'), valu…"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,18 +333,20 @@
     "# def create_expanded_button(description, button_style):\n",
     "#     return Button(description=description, button_style=button_style, layout=Layout(height='auto', width='auto'))\n",
     "\n",
-    "grid = GridspecLayout(3, 2, height='auto', width='auto')\n",
+    "# grid = GridspecLayout(3, 2, height='auto', width='auto')\n",
     "\n",
-    "grid[0, 0] = w_dataset\n",
-    "grid[0, 1] = w_algo_list\n",
-    "grid[1, 0] = w_sample_size\n",
-    "grid[1, 1] = w_show_algo_comparsion\n",
-    "grid[2, 0] = w_show_dataset_comparsion\n",
-    "grid[2, 1] = w_show_verbose\n",
+    "# grid[0, 0] = w_dataset\n",
+    "# grid[0, 1] = w_algo_list\n",
+    "# grid[1, 0] = w_sample_size\n",
+    "# grid[1, 1] = w_show_algo_comparsion\n",
+    "# grid[2, 0] = w_show_dataset_comparsion\n",
+    "# grid[2, 1] = w_show_verbose\n",
     "\n",
-    "grid\n",
+    "# grid\n",
     "\n",
-    "# meta_data = [ w_dataset, w_algo_list, w_show_algo_comparsion, w_show_dataset_comparsion, w_show_verbose ]"
+    "meta_data = [ w_dataset, w_algo_list, w_show_algo_comparsion, w_show_dataset_comparsion, w_show_verbose ]\n",
+    "\n",
+    "GridBox(meta_data, layout=Layout(grid_template_columns=\"repeat(3, 33.34%)\"))"
    ]
   },
   {
