--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -325,6 +325,8 @@
     "#------------------------------------\n",
     "# Interactive Widget component(s)\n",
     "#------------------------------------\n",
+    "app = JupyterDash(__name__)\n",
+    "\n",
     "w_dataset = Dropdown(options=data_files, value=data_files[0], description='Dataset ', disabled=False)\n",
     "w_algo_list = Dropdown(options=algos, value=algos[0], description='Algorihtm ', disabled=False)\n",
     "w_sample_size = BoundedIntText(value=sample_size, description='Sample Size ', min=1, max=1000, step=1, disabled=False)\n",
