Work in progress

--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -287,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Interactive widget component(s)"
+    "##### Interactive component(s)"
    ]
   },
   {
@@ -313,7 +313,7 @@
    ],
    "source": [
     "#--------------------------\n",
-    "# widget configuration(s)\n",
+    "# some configuration(s)\n",
     "#--------------------------\n",
     "data_files = [x for x in listdir(data_dir) if isfile(join(data_dir, x))]\n",
     "algos = [x.name for x in algorithms_to_run]\n",
@@ -323,7 +323,7 @@
     "show_verbose=False\n",
     "\n",
     "#------------------------------------\n",
-    "# Interactive Widget component(s)\n",
+    "# Interactive component(s)\n",
     "#------------------------------------\n",
     "app = JupyterDash(__name__)\n",
     "\n",
