--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -327,13 +327,16 @@
     "#------------------------------------\n",
     "app = JupyterDash(__name__)\n",
     "\n",
-    "w_dataset = dcc.Dropdown(\n",
-    "                data_files,\n",
-    "                'Dataset',\n",
-    "                id='w_dataset'\n",
-    "            )\n",
-    "            \n",
-    "            (options=data_files, value=data_files[0], description='Dataset ', disabled=False)\n",
+    "w_dataset = html.Div([\n",
+    "    html.Label(\"Dataset\"),\n",
+    "    dcc.Dropdown(\n",
+    "        id=\"w_dataset\",\n",
+    "        options=[{\"label\": x, \"value\": x} for x in data_files],\n",
+    "        value=data_files[0],\n",
+    "        clearable=False\n",
+    "    )\n",
+    "])\n",
+    "\n",
     "w_algo_list = Dropdown(options=algos, value=algos[0], description='Algorihtm ', disabled=False)\n",
     "w_sample_size = BoundedIntText(value=sample_size, description='Sample Size ', min=1, max=1000, step=1, disabled=False)\n",
     "\n",
