--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -337,6 +337,18 @@
     "    )\n",
     "])\n",
     "\n",
+    "w_algo_list = html.Div([\n",
+    "    html.Label(\"Algorihtm\"),\n",
+    "    dcc.Dropdown(\n",
+    "        id=\"w_algo_list\",\n",
+    "        options=[{\"label\": x, \"value\": x} for x in data_files],\n",
+    "        value=data_files[0],\n",
+    "        clearable=False\n",
+    "    )\n",
+    "])\n",
+    "\n",
+    "\n",
+    "\n",
     "w_algo_list = Dropdown(options=algos, value=algos[0], description='Algorihtm ', disabled=False)\n",
     "w_sample_size = BoundedIntText(value=sample_size, description='Sample Size ', min=1, max=1000, step=1, disabled=False)\n",
     "\n",
