--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -338,10 +338,10 @@
     "])\n",
     "\n",
     "w_algo_list = html.Div([\n",
-    "    html.Label(\"Algorihtm\"),\n",
+    "    html.Label(\"Algorihtm(s)\"),\n",
     "    dcc.Dropdown(\n",
     "        id=\"w_algo_list\",\n",
-    "        options=[{\"label\": x, \"value\": x} for x in data_files],\n",
+    "        options=[{\"label\": convert_to_normal(x), \"value\": x} for x in data_files],\n",
     "        value=data_files[0],\n",
     "        clearable=False\n",
     "    )\n",
