--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -342,8 +342,8 @@
     "    dcc.Dropdown(\n",
     "        id=\"w_algo_list\",\n",
     "        options=[{\"label\": convert_to_normal(x), \"value\": x} for x in algos],\n",
-    "        value=data_files[0],\n",
-    "        clearable=False\n",
+    "        value=algos[0],\n",
+    "        multi=True,\n",
     "    )\n",
     "])\n",
     "\n",
