--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -347,10 +347,27 @@
     "    )\n",
     "])\n",
     "\n",
+    "w_sample_size = html.Div([\n",
+    "    html.Label(\"Sample size\"),\n",
+    "    dcc.Input(\n",
+    "        id=\"w_sample_size\",\n",
+    "        type=\"number\",\n",
+    "        value=sample_size,\n",
+    "        min=1,\n",
+    "        max=100,\n",
+    "        step=1\n",
+    "    )\n",
+    "])\n",
     "\n",
-    "\n",
-    "w_algo_list = Dropdown(options=algos, value=algos[0], description='Algorihtm ', disabled=False)\n",
-    "w_sample_size = BoundedIntText(value=sample_size, description='Sample Size ', min=1, max=1000, step=1, disabled=False)\n",
+    "w_show_algo_comparsion = html.Div([\n",
+    "    html.Label(\"Show algorithm comparsion\"),\n",
+    "    dcc.Checklist(\n",
+    "        id=\"w_show_algo_comparsion\",\n",
+    "        options=[{\"label\": \" \", \"value\": \"show\"}],\n",
+    "        value=[\"show\"] if show_algo_comparsion else [],\n",
+    "        labelStyle={\"display\": \"inline-block\"}\n",
+    "    )\n",
+    "])\n",
     "\n",
     "w_show_algo_comparsion = Checkbox(value=show_algo_comparsion, description='Show Algo. Comparsion', disabled=False)\n",
     "w_show_dataset_comparsion = Checkbox(value=show_dataset_comparsion, description='Show Dataset Comparsion', disabled=False)\n",
