--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -292,25 +292,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2adeaa2fd08a455f9f220e6c703148d5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "GridBox(children=(Dropdown(description='Dataset ', options=('DM-HT.txt', 'CE-HT.txt', 'DM-HT_small.txt'), valu…"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#--------------------------\n",
     "# some configuration(s)\n",
@@ -369,29 +353,76 @@
     "    )\n",
     "])\n",
     "\n",
-    "w_show_algo_comparsion = Checkbox(value=show_algo_comparsion, description='Show Algo. Comparsion', disabled=False)\n",
-    "w_show_dataset_comparsion = Checkbox(value=show_dataset_comparsion, description='Show Dataset Comparsion', disabled=False)\n",
-    "w_show_verbose = Checkbox(value=show_verbose, description='Show Verbose', disabled=False)\n",
+    "w_show_dataset_comparsion = html.Div([\n",
+    "    html.Label(\"Show dataset comparsion\"),\n",
+    "    dcc.Checklist(\n",
+    "        id=\"w_show_dataset_comparsion\",\n",
+    "        options=[{\"label\": \" \", \"value\": \"show\"}],\n",
+    "        value=[\"show\"] if show_dataset_comparsion else [],\n",
+    "        labelStyle={\"display\": \"inline-block\"}\n",
+    "    )\n",
+    "])\n",
     "\n",
+    "w_show_verbose = html.Div([\n",
+    "    html.Label(\"Show verbose\"),\n",
+    "    dcc.Checklist(\n",
+    "        id=\"w_show_verbose\",\n",
+    "        options=[{\"label\": \" \", \"value\": \"show\"}],\n",
+    "        value=[\"show\"] if show_verbose else [],\n",
+    "        labelStyle={\"display\": \"inline-block\"}\n",
+    "    )\n",
+    "])\n",
     "\n",
-    "# def create_expanded_button(description, button_style):\n",
-    "#     return Button(description=description, button_style=button_style, layout=Layout(height='auto', width='auto'))\n",
-    "\n",
-    "# grid = GridspecLayout(3, 2, height='auto', width='auto')\n",
-    "\n",
-    "# grid[0, 0] = w_dataset\n",
-    "# grid[0, 1] = w_algo_list\n",
-    "# grid[1, 0] = w_sample_size\n",
-    "# grid[1, 1] = w_show_algo_comparsion\n",
-    "# grid[2, 0] = w_show_dataset_comparsion\n",
-    "# grid[2, 1] = w_show_verbose\n",
-    "\n",
-    "# grid\n",
-    "\n",
-    "meta_data = [ w_dataset, w_algo_list, w_show_algo_comparsion, w_show_dataset_comparsion, w_show_verbose ]\n",
-    "\n",
-    "GridBox(meta_data, layout=Layout(grid_template_columns=\"repeat(3, 33.34%)\"))"
+    "app.layout = html.Div([\n",
+    "    html.H1(\"Centrality measures\"),\n",
+    "    html.Div([\n",
+    "        w_dataset,\n",
+    "        w_algo_list,\n",
+    "        w_sample_size,\n",
+    "        w_show_algo_comparsion,\n",
+    "        w_show_dataset_comparsion,\n",
+    "        w_show_verbose\n",
+    "    ], style={\"width\": \"25%\", \"float\": \"left\"}),\n",
+    "    html.Div([\n",
+    "        html.Div(id=\"w_output\")\n",
+    "    ], style={\"width\": \"75%\", \"float\": \"right\"})\n",
+    "])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@app.callback(\n",
+    "    Output(\"w_output\", \"children\"),\n",
+    "    [Input(\"w_dataset\", \"value\"),\n",
+    "        Input(\"w_algo_list\", \"value\"),\n",
+    "        Input(\"w_sample_size\", \"value\"),\n",
+    "        Input(\"w_show_algo_comparsion\", \"value\"),\n",
+    "        Input(\"w_show_dataset_comparsion\", \"value\"),\n",
+    "        Input(\"w_show_verbose\", \"value\")]\n",
+    ")\n",
+    "def update_output(dataset, algo_list, sample_size, show_algo_comparsion, show_dataset_comparsion, show_verbose):\n",
+    "    print(f\"dataset: {dataset}\")\n",
+    "    print(f\"algo_list: {algo_list}\")\n",
+    "    print(f\"sample_size: {sample_size}\")\n",
+    "    print(f\"show_algo_comparsion: {show_algo_comparsion}\")\n",
+    "    print(f\"show_dataset_comparsion: {show_dataset_comparsion}\")\n",
+    "    print(f\"show_verbose: {show_verbose}\")\n",
+    "\n",
+    "    return html.Div([\n",
+    "        html.H2(\"Centrality measures for \" + dataset),\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
