--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -464,7 +464,79 @@
       "sample_size: 25\n",
       "show_algo_comparsion: ['show']\n",
       "show_dataset_comparsion: []\n",
-      "show_verbose: []\n"
+      "show_verbose: []\n",
+      "dataset: CE-HT.txt\n",
+      "algo_list: degree_centrality\n",
+      "sample_size: 25\n",
+      "show_algo_comparsion: ['show']\n",
+      "show_dataset_comparsion: []\n",
+      "show_verbose: []\n",
+      "dataset: CE-HT.txt\n",
+      "algo_list: []\n",
+      "sample_size: 25\n",
+      "show_algo_comparsion: ['show']\n",
+      "show_dataset_comparsion: []\n",
+      "show_verbose: []\n",
+      "dataset: CE-HT.txt\n",
+      "algo_list: ['degree_centrality']\n",
+      "sample_size: 25\n",
+      "show_algo_comparsion: ['show']\n",
+      "show_dataset_comparsion: []\n",
+      "show_verbose: []\n",
+      "dataset: CE-HT.txt\n",
+      "algo_list: []\n",
+      "sample_size: 25\n",
+      "show_algo_comparsion: ['show']\n",
+      "show_dataset_comparsion: []\n",
+      "show_verbose: []\n",
+      "dataset: CE-HT.txt\n",
+      "algo_list: ['degree_centrality']\n",
+      "sample_size: 25\n",
+      "show_algo_comparsion: ['show']\n",
+      "show_dataset_comparsion: []\n",
+      "show_verbose: []\n",
+      "dataset: CE-HT.txt\n",
+      "algo_list: ['degree_centrality', 'out_degree_centrality']\n",
+      "sample_size: 25\n",
+      "show_algo_comparsion: ['show']\n",
+      "show_dataset_comparsion: []\n",
+      "show_verbose: []\n",
+      "dataset: CE-HT.txt\n",
+      "algo_list: ['degree_centrality', 'out_degree_centrality', 'katz_centrality']\n",
+      "sample_size: 25\n",
+      "show_algo_comparsion: ['show']\n",
+      "show_dataset_comparsion: []\n",
+      "show_verbose: []\n",
+      "dataset: CE-HT.txt\n",
+      "algo_list: ['degree_centrality', 'out_degree_centrality', 'katz_centrality']\n",
+      "sample_size: 25\n",
+      "show_algo_comparsion: ['show']\n",
+      "show_dataset_comparsion: ['show']\n",
+      "show_verbose: []\n",
+      "dataset: CE-HT.txt\n",
+      "algo_list: ['degree_centrality', 'out_degree_centrality', 'katz_centrality']\n",
+      "sample_size: 25\n",
+      "show_algo_comparsion: ['show']\n",
+      "show_dataset_comparsion: ['show']\n",
+      "show_verbose: ['show']\n",
+      "dataset: DM-HT.txt\n",
+      "algo_list: ['degree_centrality', 'out_degree_centrality', 'katz_centrality']\n",
+      "sample_size: 25\n",
+      "show_algo_comparsion: ['show']\n",
+      "show_dataset_comparsion: ['show']\n",
+      "show_verbose: ['show']\n",
+      "dataset: DM-HT_small.txt\n",
+      "algo_list: ['degree_centrality', 'out_degree_centrality', 'katz_centrality']\n",
+      "sample_size: 25\n",
+      "show_algo_comparsion: ['show']\n",
+      "show_dataset_comparsion: ['show']\n",
+      "show_verbose: ['show']\n",
+      "dataset: DM-HT.txt\n",
+      "algo_list: ['degree_centrality', 'out_degree_centrality', 'katz_centrality']\n",
+      "sample_size: 25\n",
+      "show_algo_comparsion: ['show']\n",
+      "show_dataset_comparsion: ['show']\n",
+      "show_verbose: ['show']\n"
      ]
     }
    ],
