--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -403,140 +403,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "@app.callback(\n",
-    "    Output(\"w_output\", \"children\"),\n",
-    "    [Input(\"w_dataset\", \"value\"),\n",
-    "        Input(\"w_algo_list\", \"value\"),\n",
-    "        Input(\"w_sample_size\", \"value\"),\n",
-    "        Input(\"w_show_algo_comparsion\", \"value\"),\n",
-    "        Input(\"w_show_dataset_comparsion\", \"value\"),\n",
-    "        Input(\"w_show_verbose\", \"value\")]\n",
-    ")\n",
-    "def update_output(dataset, algo_list, sample_size, show_algo_comparsion, show_dataset_comparsion, show_verbose):\n",
-    "    print(f\"dataset: {dataset}\")\n",
-    "    print(f\"algo_list: {algo_list}\")\n",
-    "    print(f\"sample_size: {sample_size}\")\n",
-    "    print(f\"show_algo_comparsion: {show_algo_comparsion}\")\n",
-    "    print(f\"show_dataset_comparsion: {show_dataset_comparsion}\")\n",
-    "    print(f\"show_verbose: {show_verbose}\")\n",
+    "# @app.callback(\n",
+    "#     Output(\"w_output\", \"children\"),\n",
+    "#     [Input(\"w_dataset\", \"value\"),\n",
+    "#         Input(\"w_algo_list\", \"value\"),\n",
+    "#         Input(\"w_sample_size\", \"value\"),\n",
+    "#         Input(\"w_show_algo_comparsion\", \"value\"),\n",
+    "#         Input(\"w_show_dataset_comparsion\", \"value\"),\n",
+    "#         Input(\"w_show_verbose\", \"value\")]\n",
+    "# )\n",
+    "# def update_output(dataset, algo_list, sample_size, show_algo_comparsion, show_dataset_comparsion, show_verbose):\n",
+    "#     print(f\"dataset: {dataset}\")\n",
+    "#     print(f\"algo_list: {algo_list}\")\n",
+    "#     print(f\"sample_size: {sample_size}\")\n",
+    "#     print(f\"show_algo_comparsion: {show_algo_comparsion}\")\n",
+    "#     print(f\"show_dataset_comparsion: {show_dataset_comparsion}\")\n",
+    "#     print(f\"show_verbose: {show_verbose}\")\n",
     "\n",
-    "    return html.Div([\n",
-    "        html.H2(\"Centrality measures for \" + dataset),\n",
-    "    ])"
+    "#     return html.Div([\n",
+    "#         html.H2(\"Centrality measures for \" + dataset),\n",
+    "#     ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8050/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x12d8cfdf0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "dataset: DM-HT.txt\n",
-      "algo_list: degree_centrality\n",
-      "sample_size: 25\n",
-      "show_algo_comparsion: ['show']\n",
-      "show_dataset_comparsion: []\n",
-      "show_verbose: []\n",
-      "dataset: CE-HT.txt\n",
-      "algo_list: degree_centrality\n",
-      "sample_size: 25\n",
-      "show_algo_comparsion: ['show']\n",
-      "show_dataset_comparsion: []\n",
-      "show_verbose: []\n",
-      "dataset: CE-HT.txt\n",
-      "algo_list: []\n",
-      "sample_size: 25\n",
-      "show_algo_comparsion: ['show']\n",
-      "show_dataset_comparsion: []\n",
-      "show_verbose: []\n",
-      "dataset: CE-HT.txt\n",
-      "algo_list: ['degree_centrality']\n",
-      "sample_size: 25\n",
-      "show_algo_comparsion: ['show']\n",
-      "show_dataset_comparsion: []\n",
-      "show_verbose: []\n",
-      "dataset: CE-HT.txt\n",
-      "algo_list: []\n",
-      "sample_size: 25\n",
-      "show_algo_comparsion: ['show']\n",
-      "show_dataset_comparsion: []\n",
-      "show_verbose: []\n",
-      "dataset: CE-HT.txt\n",
-      "algo_list: ['degree_centrality']\n",
-      "sample_size: 25\n",
-      "show_algo_comparsion: ['show']\n",
-      "show_dataset_comparsion: []\n",
-      "show_verbose: []\n",
-      "dataset: CE-HT.txt\n",
-      "algo_list: ['degree_centrality', 'out_degree_centrality']\n",
-      "sample_size: 25\n",
-      "show_algo_comparsion: ['show']\n",
-      "show_dataset_comparsion: []\n",
-      "show_verbose: []\n",
-      "dataset: CE-HT.txt\n",
-      "algo_list: ['degree_centrality', 'out_degree_centrality', 'katz_centrality']\n",
-      "sample_size: 25\n",
-      "show_algo_comparsion: ['show']\n",
-      "show_dataset_comparsion: []\n",
-      "show_verbose: []\n",
-      "dataset: CE-HT.txt\n",
-      "algo_list: ['degree_centrality', 'out_degree_centrality', 'katz_centrality']\n",
-      "sample_size: 25\n",
-      "show_algo_comparsion: ['show']\n",
-      "show_dataset_comparsion: ['show']\n",
-      "show_verbose: []\n",
-      "dataset: CE-HT.txt\n",
-      "algo_list: ['degree_centrality', 'out_degree_centrality', 'katz_centrality']\n",
-      "sample_size: 25\n",
-      "show_algo_comparsion: ['show']\n",
-      "show_dataset_comparsion: ['show']\n",
-      "show_verbose: ['show']\n",
-      "dataset: DM-HT.txt\n",
-      "algo_list: ['degree_centrality', 'out_degree_centrality', 'katz_centrality']\n",
-      "sample_size: 25\n",
-      "show_algo_comparsion: ['show']\n",
-      "show_dataset_comparsion: ['show']\n",
-      "show_verbose: ['show']\n",
-      "dataset: DM-HT_small.txt\n",
-      "algo_list: ['degree_centrality', 'out_degree_centrality', 'katz_centrality']\n",
-      "sample_size: 25\n",
-      "show_algo_comparsion: ['show']\n",
-      "show_dataset_comparsion: ['show']\n",
-      "show_verbose: ['show']\n",
-      "dataset: DM-HT.txt\n",
-      "algo_list: ['degree_centrality', 'out_degree_centrality', 'katz_centrality']\n",
-      "sample_size: 25\n",
-      "show_algo_comparsion: ['show']\n",
-      "show_dataset_comparsion: ['show']\n",
-      "show_verbose: ['show']\n"
+      "Address already in use\n",
+      "Port 8050 is in use by another program. Either identify and stop that program, or start the server with a different port.\n"
      ]
     }
    ],
