--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -247,18 +247,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sample_size' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [3], line 27\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;66;03m# data_file = join(data_dir, 'DM-HT_small.txt')\u001b[39;00m\n\u001b[1;32m     26\u001b[0m graph \u001b[38;5;241m=\u001b[39m nx\u001b[38;5;241m.\u001b[39mread_edgelist(data_file, nodetype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mstr\u001b[39m, data\u001b[38;5;241m=\u001b[39m((\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mweight\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mfloat\u001b[39m),))\n\u001b[0;32m---> 27\u001b[0m graph \u001b[38;5;241m=\u001b[39m sample_graph(graph\u001b[38;5;241m=\u001b[39mgraph, sample_size\u001b[38;5;241m=\u001b[39msample_size, verbose\u001b[38;5;241m=\u001b[39mverbose, plot\u001b[38;5;241m=\u001b[39mplot)\n\u001b[1;32m     28\u001b[0m di_graph \u001b[38;5;241m=\u001b[39m undirected_to_directed(graph)\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgraph\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'sample_size' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph with 17 nodes and 16 edges\n"
      ]
     }
    ],
@@ -278,9 +274,9 @@
     "]\n",
     "\n",
     "# # total sample size\n",
-    "# sample_size = 25\n",
-    "# verbose = False\n",
-    "# plot = False\n",
+    "sample_size = 25\n",
+    "verbose = False\n",
+    "plot = False\n",
     "\n",
     "# config. dir for input graph\n",
     "parent_dir = abspath(join(join(getcwd(), pardir), pardir))\n",
@@ -304,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,16 +427,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Address already in use\n",
-      "Port 8050 is in use by another program. Either identify and stop that program, or start the server with a different port.\n"
-     ]
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x135d80490>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
