--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -427,11 +427,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Address already in use\n",
+      "Port 8050 is in use by another program. Either identify and stop that program, or start the server with a different port.\n"
+     ]
+    }
+   ],
    "source": [
-    "app.run_server(mode='jupyterlab')"
+    "app.run_server(mode='inline')"
    ]
   },
   {
