--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -254,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph with 18 nodes and 19 edges\n"
+      "Graph with 20 nodes and 19 edges\n"
      ]
     }
    ],
@@ -445,7 +445,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1196e7c40>"
+       "<IPython.lib.display.IFrame at 0x1590baf10>"
       ]
      },
      "metadata": {},
