--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -390,11 +390,11 @@
     "        w_show_algo_comparsion,\n",
     "        w_show_dataset_comparsion,\n",
     "        w_show_verbose\n",
-    "    ], style={\"width\": \"25%\", \"float\": \"left\"}),\n",
+    "    ], style={}),\n",
     "    html.Div([\n",
     "        html.Div(id=\"w_output\")\n",
-    "    ], style={\"width\": \"75%\", \"float\": \"right\"})\n",
-    "])"
+    "    ], style={})\n",
+    "], style={\"width\": \"75%\", \"float\": \"right\"})"
    ]
   },
   {
